# prp_mock_mail_viewer

./: .gitignore  README.md
mail_viewer/: pyproject.toml
mail_viewer/mail_viewer/: main.py
mail_viewer/mail_viewer/modules/: clients.py
