[tool.poetry]
name = "mail-viewer"
version = "0.1.0"
description = ""
authors = ["yuya-morimoto <my.hack.0312@gmail.com>"]
readme = "README.md"
packages = [{include = "mail_viewer"}]

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
